Made the money system
