# backend/MentalWealth/Data/Models/Responses/MoneyViewResponse.cs
@@ -1,0 +1,6 @@
+namespace MentalWealth.Data.Models.Responses;
+
+public class MoneyViewResponse
+{
+    public int Balance { get; set; }
+}
